# payroll_backend

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  openapi.rs  server.rs
src/domain/: bank.rs  division.rs  employee.rs  health.rs  job.rs  mod.rs  organization.rs  payroll.rs
src/extractors/: mod.rs
src/handlers/: bank.rs  division.rs  employee.rs  health.rs  job.rs  mod.rs  organization.rs  payroll.rs
src/infrastructure/: bank_repository.rs  division_repository.rs  employee_repository.rs  job_repository.rs  mod.rs  organization_repository.rs  payroll_repository.rs  surreal.rs
src/middleware/: mod.rs
src/routes/: bank.rs  division.rs  employee.rs  health.rs  job.rs  mod.rs  organization.rs  payroll.rs
src/services/: bank.rs  division.rs  employee.rs  job.rs  mod.rs  organization.rs  payroll.rs
tests/: banks.rs  divisions.rs  employees.rs  health.rs  jobs.rs  organizations.rs  payrolls.rs  swagger_docs.rs
tests/support/: in_memory_repository.rs  mod.rs
