[package]
name = "nomina"
version = "0.1.0"
edition = "2024"
authors = ["Efrén Fuentes"]

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
