[package]
name = "nomina"
version = "0.1.0"
edition = "2024"
authors = ["Efrén Fuentes"]

[dependencies]
axum = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { package = "surrealdb-beta", version = "2.0.2", default-features = false, features = [
    "protocol-http",
    "protocol-ws",
    "rustls",
    "http",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v4"] }
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
